# codeassist-interceptor

./: CLAUDE.md  FIXES_APPLIED.md  QUICK_START.md  README.md  SETUP_GUIDE.md  SOLUTION_SUMMARY.md  THINKING_CAPTURE_GUIDE.md  cai-setup.sh
codeassist-interceptor/: .gitignore  .mcp.json  INTEGRATION_QUICK_START.md  README.md  diagnose_paths.py  pyproject.toml
codeassist-interceptor/examples/: CLAUDE_MD_INTEGRATION.md
codeassist-interceptor/scripts/: cai-serve.sh
codeassist-interceptor/src/: __init__.py  cli.py
codeassist-interceptor/src/mcp/: server.py
codeassist-interceptor/src/models/: ir.py
codeassist-interceptor/src/parser/: extractor.py  llm_extractor.py  session_parser.py  watcher.py
codeassist-interceptor/src/retriever/: context_retriever.py
codeassist-interceptor/src/storage/: embeddings.py  ir_store.py
codeassist-interceptor/tests/: conftest.py  fixtures.py  test_extractor.py  test_parser.py  test_retriever.py  test_storage.py  test_watcher.py
skills/cai/: SKILL.md
skills/cai-debug/: SKILL.md
skills/cai-extend/: SKILL.md
skills/cai-mcp/: SKILL.md
skills/cai-models/: SKILL.md
skills/cai-parser/: SKILL.md
skills/cai-retriever/: SKILL.md
skills/cai-storage/: SKILL.md
skills/cai-test/: SKILL.md
skills/cai-watcher/: SKILL.md
